--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 h1{color: red;}
 main{
     border: 2px solid red;
-    width: 100%;
-    height: 70;
+    display: flex;
 }
 .border{
     border: 2px solid blue;  
@@ -10,11 +9,15 @@ main{
 
 .component{
     color:green;
-    display:inline-block;    
+    padding: 10px;
+       
 }
 .colum1{
-    width: 70%;
+   
+    flex: 2;
+
 }
 .colum2{
-width: auto;
+flex: 1;
+
 }
